--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -6,79 +6,80 @@ original-date: '2018-01-01'
 comments: true
 hidden: true
 thumbnail: thumbnail-img_9269.jpg
+tags: ЖизньВСанФранциско Размышления Переезд
 images:
-  - 2017-05-28_13-16-26_841.jpg
-  - img_0133.jpg
-  - img_2004.jpg
-  - img_2151.jpg
-  - img_2341.jpg
-  - img_3068.jpg
-  - img_3099.jpg
-  - img_3246.jpg
-  - img_3550.jpg
-  - img_3854.jpg
-  - img_8544.jpg
-  - img_9008.jpg
----
 
+  - img_0133.jpg | Санта-Барбара
+  - img_2151.jpg | Нью Йорк с Женечкой
+  - img_2341.jpg | Мост 'золотые ворота'
+  - img_3068.jpg | Пляж в Санта-Круз
+  - img_3099.jpg | Дамба Гувера
+  - img_3246.jpg | Bixby Bridge
+  - img_3550.jpg | 17 mile-drive
+  - img_3854.jpg | Гранд Каньон
+  - img_0657.jpg |
+  - img_8544.jpg |
+  - img_9008.jpg |
+---
 
 Вот и подошел к концу 2017 год. Понятие Нового Года философское. Но не важно, как вы относитесь к празднику. Важно, что его можно использовать как чёткий интервал времени для подведениями итогов одного периода жизни и установки целей на новый.
 <!--separate--> 
 
-Не удивляйтесь, что только к концу января я "созрела" к публикации этой статьи. Простите и поймите. Я была в Питере, а - это другая вселенная. Сейчас я снова в Сан Франциско и, по моим ощущениям, новый календарный год только начался.
+Не удивляйтесь, что только к концу января я "созрела" к публикации этой статьи. Простите и поймите. Я была в Питере, а - это другая вселенная. Сейчас я снова в Сан-Франциско и, по моим ощущениям, новый календарный год только начался.
 
-{% include image src="img_4441_1.jpg" %}
+{% include image src="img_4441_1.jpg" title="Встречаем Новый Год в Питере" %}
 
 Это был самый необычный, сложный, полный впечатлений и новых открытий год для меня и нашей семьи. Море нового опыта и выхода из зоны комфорта. Оглядываясь назад, понимаю, сколько работы проделано и сколько ещё ждет впереди.
 
-Если искренне верить в желания, то они начинают сбываться. Но для этого большинство желаний должны превращаться в цели. Из целей - в планы. А из планов в последовательные действия.
+Если искренне верить в желания, то они начинают сбываться. Но для этого, большинство желаний должны превращаться в цели. Из целей - в планы. А из планов в последовательные действия.
 
-{% include image src="img_2916.jpg" %}
+{% include image src="img_2916.jpg" title="Мы с моей Женечкой покоряем Los Angeles" %}
 
 
 # Итак, вот, что сбылось у меня в 2017 году:
 
-1. Мы переехали в Сан Франциско. Здесь нашли квартиру и обустроились в новой для нас стране.
+1. Мы переехали в Сан-Франциско. Здесь нашли квартиру и обустроились в новой для нас стране.
 2. Я начала писать заметки о нашей жизни (это удивительное событие, ведь никогда раньше я не писала).
-3. Мы запустили сайт <a href="http://karmelalla.com/">karmelalla.com</a>. За 2017 год я написала <a href="http://karmelalla.com/">37 статей</a>, <a href="http://karmelalla.com/cooking/">8 рецептов</a> и выложила <a href="http://karmelalla.com/gallery/">596 фотографий</a>. Спасибо тебе, Кирилл, за то, что предложил создать сайт, создал его и теперь постоянно улучшаешь и наполняешь его новыми «фишками».
-4. Я <a href="http://karmelalla.com/first-half-marathon">впервые пробежала полумарафон</a> . 21 км за 2 часа 14 минут
+3. Мы запустили сайт <a href="http://karmelalla.com/" target="_blank">karmelalla.com</a>. За 2017 год я написала <a href="http://karmelalla.com/" target="_blank">37 статей</a>, <a href="http://karmelalla.com/cooking/" target="_blank">8 рецептов</a> и выложила <a href="/gallery/" target="_blank">596 фотографий</a>. Спасибо тебе, Кирилл, за то, что предложил создать сайт, создал его и теперь постоянно улучшаешь и наполняешь его новыми «фишками».
+4. Я <a href="/first-half-marathon" target="_blank">впервые пробежала полумарафон</a> . 21 км за 2 часа 14 минут
 5. Преодолели тысячи миль на машинах и самолетах, и десятки километров пешеходных маршрутов в:
-* <a href="http://karmelalla.com/2017/04/12/los-angeles-p1.html">Лос Анжелес</a>
+* <a href="/2017/04/12/los-angeles-p1.html" target="_blank">Лос Анжелес</a>
 * Сан Диего
-* <a href="http://karmelalla.com/olympia-grand-canyon">Лас Вегас</a>
-* <a href="http://karmelalla.com/olympia-grand-canyon">Гранд Каньон</a>
-* <a href="http://karmelalla.com/2017/07/02/lake-tahoe.html">Озеро Тахо</a>
-<!-- * <a href="{% post_url 2017-01-30-santa-cruz-weekend %}">Санта Круз</a> -->
-* <a href="/jekyll/update/2017/01/30/santa-cruz-weekend.html">Санта Круз</a>
-* <a href="http://karmelalla.com/jekyll/update/2017/03/21/monterey-carmel.html">Monterey, Carmel, 17 mile drive, Bixby Bridge</a>
-* <a href="http://karmelalla.com/yosemite">Yosemite</a>
+* <a href="/olympia-grand-canyon" target="_blank">Лас Вегас</a>
+* <a href="/olympia-grand-canyon" target="_blank">Гранд Каньон</a>
+* <a href="/2017/07/02/lake-tahoe.html" target="_blank">Озеро Тахо</a>
+* <a href="/jekyll/update/2017/01/30/santa-cruz-weekend.html" target="_blank">Санта Круз</a>
+* <a href="/jekyll/update/2017/03/21/monterey-carmel.html" target="_blank">Monterey, Carmel, 17 mile drive, Bixby Bridge</a>
+* <a href="/yosemite" target="_blank">Yosemite</a>
 * Disney Land
 * Universal Studios
 * Нью Йорк с Женечкой
-5. Изучили самые секретные уголки Сан Франциско. И я составила <a href="http://karmelalla.com/2017/05/01/guests.html">туристический маршрут</a> по этому вошебному городу.
-6. Посетили соревнования по бодибилдингу <a href="http://karmelalla.com/olympia-grand-canyon">«Mr. Olympia»</a>.
+5. Изучили самые секретные уголки Сан-Франциско. И я составила <a href="/2017/05/01/guests.html" target="_blank">туристический маршрут</a> по этому вошебному городу.
+6. Посетили соревнования по бодибилдингу <a href="/olympia-grand-canyon" target="_blank">«Mr. Olympia»</a>.
 7. Я научилась пользоваться Macbook, Github, Sublime, Markdown, Photoshop, Lightroom и выучила многие горячие клавиши.  Не понимаю, как жила раньше.
 8. Начала изучать "фотографию".
 9. Прошла курс по Business English в San Francisco City College.
 10. Два раза съездила в Россию.
-11. Мы привезли Женечку на месяц в Америку и показали ей Нью Йорк, Сан Франциско, Лос Анжелес и Disneyland.
-12. Получила калифорнийские водительские права.
-13. Научилась делать так, чтобы дома жили цветы.
-14. Мы начали заниматься йогой, хотя хотелось бы побольше.
-15. Прочитала много книг (гораздо больше, чем раньше).
-16. Познакомилась с тётей из Лос Анжелеса. Тётя Фира, я очень счастлива, что мы нашлись!
+11. Мы привезли Женечку на месяц в Америку и показали ей Нью Йорк, Сан-Франциско, Лос Анжелес и Disneyland.
+12. Мы приняли у себя в гостях Дашу и она полюбила Сан-Франциско еще больше, чем мы.
+13. Получила калифорнийские водительские права.
+14. Научилась делать так, чтобы дома жили цветы.
+15. Мы начали заниматься йогой, хотя хотелось бы побольше.
+16. Прочитала много книг (гораздо больше, чем раньше).
+17. Познакомилась с тётей из Лос Анжелеса. Тётя Фира, я очень счастлива, что мы нашлись!
 
 {% include image src="img_8506.jpg" %}
 
 Много интересного было в 2017 году. Я очень благодарна родителям, сестре, друзьям и всем близким людям, окружающим меня за заботу и поддержку. Год был не простым. А расставание с вами - очень тяжелым. Все вы оставались на связи, часто звонили, писали, дарили любовь и заботу. Это - самое ценное. Спасибо, что вы есть!
 
-{% include image src="img_3078.jpg" %}
+{% include image src="img_3078.jpg" title="Санта-Круз" %}
 
 Спасибо, Кирилл! Многие пункты из этого списка стали возможными благодаря тебе. Благодаря тому, что ты поддерживаешь меня в любых идеях или сам приносишь их в нашу жизнь. Это не всегда легко. Но вместе мы отличная команда и со всем справимся. Впереди нас ждут новые интересные открытия!
 
-{% include image src="img_0657.jpg" %}
+{% include image src="lena_golden_gate.jpg" title="Покоряем мост 'Золотые Ворота' на велосипедах" %}
 
 Спасибо, Лена, за поддержку и море советов в этом году. Не хочу думать о том, какой бы этот год был без тебя и твоей семьи. Совершенно точно, вы - огромный корень моего дерева, которое переехало в новую страну.
+
 
 И конечно,  спасибо вам, читатели сайта. От того, что вы у меня есть, мне очень тепло. Оставляйте побольше комментариев, так я буду знать, что вы со мной. Мне это жизненно необходимо.
 
@@ -88,7 +89,7 @@ images:
 Все вы - мои близкие, друзья, читатели сайта подарили мне этот год.  И я очень благодарна каждому из вас за это!
 Я желаю всем вам исполнения желаний! Главное не забывайте купить «лотерейный билет»!
 
-{% include image src="img_2424_1.jpg" %}
+{% include image src="img_2424_1.jpg"  title="Пляж в Сан-Франциско Ocean Beach" %}
 
 >
 Один человек мечтал выиграть в лотерею. Каждый день он приходил в храм вставал на колени и просил Бога:
@@ -100,4 +101,3 @@ images:
 > Вдруг над его головой раздался голос Всевышнего:
 
 > ---Да купи же ты, наконец, лотерейный билет!
-
